Fix: fixed spacing between header and staff for <=600px screen

--- a/styles.css
+++ b/styles.css
@@ -60,6 +60,7 @@ h6{
 @media only screen and (max-width: 600px) {
   #logoBar{
     width: 70vw;
+    height: 70vh;
   }
   body{
     flex-direction: column;
@@ -67,7 +68,6 @@ h6{
     align-items: center;
   }
   #staffGallery{
-    margin-top: -5rem;
     grid-template-columns: 1fr; 
   }
   .card{
